--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,4 +30,20 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+  
+  .scrollbar-thin::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  .scrollbar-thin::-webkit-scrollbar-track {
+    background: #e5e7eb; /* Adjust track color as needed */
+    border-radius: 9999px; /* Fully round the track */
+  }
+
+  .scrollbar-thin::-webkit-scrollbar-thumb {
+    background-color: #374151; /* Adjust thumb color as needed */
+    border-radius: 9999px; /* Fully round the thumb */
+    border: 2px solid transparent;
+    background-clip: content-box;
+  }
 }
